2015-03-27  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (start_http_daemon): Remove limit on connection timeout,
	because some operations take a long time, like getting very large
	reports.

2015-03-26  Matthew Mundell <matthew.mundell@greenbone.net>

	Allow access to the Create Permissions page even if the user has limited
	subject access.

	* src/gsad_omp.c (new_permission): Restrict requests to users, roles
	and groups that the user has modify_user permission on.

	* src/html/classic/omp.xsl (html-create-permission-form): Disable the
	subject dropdowns when the user may not access the associated type.
	(html-permissions-table): Enable the new icon if the user may access
	any one of the subject types.

2015-03-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (format_file_name): Set format_name to NULL if it's an
	empty string, because openvas_export_file_name does not handle empty
	strings.

2015-03-25  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/help.xsl (new_override.html): Add missing text for
	"NVT OID" and "Active" inputs. Add syntax info and examples for input
	fields besides the radio buttons. Fix table row coloring.

2015-03-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (user [edit]): If the user has Super Admin
	put it in a dummy dropdown above the others, instead of trying to set it
	on the user, which is not permitted.

2015-03-25  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (task [details], task): Revert the order of
	task_id and status keywords as the replace_task_id param will change
	the order again, putting the "and" in the wrong place.

2015-03-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/help.xsl: Flush trailing whitespace.

2015-03-24  Matthew Mundell <matthew.mundell@greenbone.net>

	Note permission icon in help.

	* src/html/classic/help.xsl (name-column): New template.